--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+  <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
+<!--   <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="data/nta_lap_V3.geojson.json"></script>
-  <script src="data/nycd.geojson.json"></script>  
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-XYCjB+hFAjSbgf9yKUgbysEjaVLOXhCgATTEBpCqT1R3jvG5LGRAK5ZIyRbH5vpX" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
@@ -90,14 +88,16 @@
 
 
  <div id="container">
-  <!--     <div id="sidebar">
+      <div id="sidebar">
         <div id='ntaChart'><svg></svg></div>
-      </div> -->
+      </div>
       <div id="map"></div>
 </div>
-
+  
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMxGbmxGwQOKZTFOhIsJ4z3BGFQ7gsSJ8&callback=initMap"
+    async defer></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.3/nv.d3.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.3/nv.d3.js"></script> -->
   <script src="js/javascript.js"></script> 
 
   
