delete drawing codes

--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
           <input id="go-places" type="button" value="Go">
         </div>
       </div>
-      <div id="map"></div>
-    </div> -->
+      <div id="map"></div> -->
+    </div>
 
     <script src="js/javascript.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> 
     <script async defer
         src=
-        "https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyBMxGbmxGwQOKZTFOhIsJ4z3BGFQ7gsSJ8&v=3&callback=initMap">
+        "https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyBMxGbmxGwQOKZTFOhIsJ4z3BGFQ7gsSJ8&v=3&callback=initMap">
     </script>
 
   </body>
