--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </ul>
           <form class="navbar-form navbar-left">
             <div class="form-group" style="width: 300px;">
-              <input id="places-search" type="text" class="form-control" placeholder="Address">
+              <input id="places-search" type="text" class="form-control" placeholder="Search places">
             </div>
             <button id="go-places" value="Go" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
           </form>
