--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <div class="form-group" style="width: 300px;">
               <input id="places-search" type="text" class="form-control" placeholder="Search places">
             </div>
-            <button id="go-places" value="Go" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+            <input id="go-places" type="button" value="Search">
+          <!--   <button id="go-places" value="Go" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> -->
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="" data-toggle="modal" data-target="#about">About</a></li>
@@ -134,8 +135,8 @@
           <input id="go-places" type="button" value="Go">
         </div>
       </div>
-      <div id="map"></div> -->
-    </div>
+      <div id="map"></div>
+    </div> -->
 
     <script src="js/javascript.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> 
