--- a/index.html
+++ b/index.html
@@ -49,13 +49,16 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="" data-toggle="modal" data-target="#about">About</a></li>
             <li><a href="" data-toggle="modal" data-target="#contact">Contact</a></li>
+             <!-- <div id="start_div"> -->
+              <select id="changelanguage"> </select>
+            <!-- </div> -->
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">English</a></li>
-                <li><a href="#">Español</a></li>
-                <li><a href="#">中文</a></li>
-                <li><a href="#">franse kreyòl</a></li>
+                <li><a id="language" value='en' href="#">English</a></li>
+                <li><a id="language" value='es' href="#">Español</a></li>
+                <li><a id="language" value='zh-CN' href="#">中文简体</a></li>
+                <li><a id="language" value='zh-TW' href="#">中文繁體</a></li>
               </ul>
             </li>
           </ul>
