--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </ul>
           <form class="navbar-form navbar-left">
             <div class="form-group" style="width: 300px;">
-              <input id="places-search" type="text" class="form-control" placeholder="Search places">
+              <input id="places-search" type="text" class="form-control" placeholder="Places | Lugares | 地点">
             </div>
             <input id="go-places" type="button" value="Search">
           <!--   <button id="go-places" value="Go" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> -->
@@ -49,10 +49,15 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="" data-toggle="modal" data-target="#about">About</a></li>
             <li><a href="" data-toggle="modal" data-target="#contact">Contact</a></li>
-             <!-- <div id="start_div"> -->
-              <select id="changelanguage"> </select>
+             <!-- <div class="form-group" > -->
+            <!-- <select id="changelanguage" style="width: 100px;"> </select> -->
             <!-- </div> -->
             <li class="dropdown">
+              <div class="form-group" style="padding-top: 7px;">
+              <select id="changelanguage" class="form-control" style="width: 100px;"></select>
+              </div>
+            </li>
+ <!--            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a id="language" value='en' href="#">English</a></li>
@@ -60,7 +65,7 @@
                 <li><a id="language" value='zh-CN' href="#">中文简体</a></li>
                 <li><a id="language" value='zh-TW' href="#">中文繁體</a></li>
               </ul>
-            </li>
+            </li> -->
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
