--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Routes<span class="caret"></span></a>
               <ul class="dropdown-menu">
+                <li><a href="#">Citywide</a></li>
                 <li><a href="#">Chinatown</a></li>
                 <li><a href="#">Flatbush</a></li>
                 <li><a href="#">Eastern Queens</a></li>
-                <li><a href="#">Eastern New Jersey</a></li>
-                <li><a href="#">Edenwald</a></li>
+                <!-- <li><a href="#">Eastern New Jersey</a></li> -->
+                <!-- <li><a href="#">Edenwald</a></li> -->
               </ul>
             </li>
           </ul>
@@ -48,6 +49,7 @@
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="" data-toggle="modal" data-target="#about">About</a></li>
+            <li class="active"><a href="https://xd.adobe.com/view/f5c5e2e2-9e6b-4812-a790-0c420b3093a4/" target="_blank">App Demo<span class="sr-only">(current)</span></a></li>
             <li><a href="" data-toggle="modal" data-target="#contact">Contact</a></li>
              <!-- <div class="form-group" > -->
             <!-- <select id="changelanguage" style="width: 100px;"> </select> -->
