--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="form-group" style="width: 300px;">
               <input id="places-search" type="text" class="form-control" placeholder="Places | Lugares | 地点">
             </div>
-            <input id="go-places" type="button" value="Search">
+            <input id="go-places" type="button" value='Search'>
           <!--   <button id="go-places" value="Go" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> -->
           </form>
           <ul class="nav navbar-nav navbar-right">
