--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dollar Van NYC</title>
+    <title>DollarVan.nyc</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -22,12 +22,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand mybutton">Dollar Van NYC</a>
+          <a class="navbar-brand mybutton" href="http://www.dollarvan.nyc/">DollarVan.nyc</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
+<!--           <ul class="nav navbar-nav">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Routes<span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -35,11 +35,9 @@
                 <li><a href="#">Chinatown</a></li>
                 <li><a href="#">Flatbush</a></li>
                 <li><a href="#">Eastern Queens</a></li>
-                <!-- <li><a href="#">Eastern New Jersey</a></li> -->
-                <!-- <li><a href="#">Edenwald</a></li> -->
               </ul>
             </li>
-          </ul>
+          </ul> -->
           <form class="navbar-form navbar-left">
             <div class="form-group" style="width: 300px;">
               <input id="places-search" type="text" class="form-control" placeholder="Places | Lugares | 地点">
@@ -47,18 +45,15 @@
             <input id="go-places" type="button" value='Search'>
           <!--   <button id="go-places" value="Go" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> -->
           </form>
-          <ul class="nav navbar-nav navbar-right">
+<!--           <ul class="nav navbar-nav navbar-right">
             <li><a href="" data-toggle="modal" data-target="#about">About</a></li>
             <li class="active"><a href="https://xd.adobe.com/view/f5c5e2e2-9e6b-4812-a790-0c420b3093a4/" target="_blank">App Demo<span class="sr-only">(current)</span></a></li>
             <li><a href="" data-toggle="modal" data-target="#contact">Contact</a></li>
-             <!-- <div class="form-group" > -->
-            <!-- <select id="changelanguage" style="width: 100px;"> </select> -->
-            <!-- </div> -->
             <li class="dropdown">
               <div class="form-group" style="padding-top: 7px;">
               <select id="changelanguage" class="form-control" style="width: 120px;"></select>
               </div>
-            </li>
+            </li> -->
  <!--            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language<span class="caret"></span></a>
               <ul class="dropdown-menu">
